# racing-telemetry-pipeline

./: .gitignore  DATA_DISCOVERY.md  DATA_QUALITY_REPORT_BARBER_R1.md  EXECUTIVE_SUMMARY_BARBER_R1.md  HANDOVER.md  LAP_REPAIR_TEST_RESULTS.md  Makefile  PROGRESS.md  QUICKSTART.md  README.md  TIME_SYNC_TEST_RESULTS.md  pyproject.toml  test_ingestion.py  test_lap_repair.py  test_position_normalization.py  test_time_sync.py
.claude/: settings.local.json
dash_sim/: README.md  app.py  app_simple.py  build_gps_centerline.py  calibrate_track.py  centerline_transform.py  config.py  coordinate_transform.py  data_loader.py  data_loader_complex.py.bak  data_loader_simple.py  extract_main_centerline.py  offset_ribbons.py  process_track.py  requirements.txt
dash_sim/assets/: PLACE_TRACK_IMAGE_HERE.txt  gps_centerline_reference.json  styles.css  track_centerline.npy
dash_sim/track_processing/: __init__.py  auto_detect.py  ribbon_generator.py  svg_extractor.py  track_loader.py
dash_sim/tracks/barber/: config.yaml  track_centerline.npy  (+2 more)
data/baselines/: barber_r1_baseline.json
examples/: demo_ingestion.py  run_full_pipeline.py  test_pivot.py  test_validation.py
src/conf/: circuit_params.yaml  settings.py  validation_policy.yaml
src/ingestion/: __init__.py  anomalies.py  ingest.py  partitioning.py
src/schemas/: __init__.py  features.py  frames.py  metadata.py  raw.py  validation.py
src/transform/: __init__.py  drift.py  lap_repair.py  pivot.py  position.py  resample.py  sync.py  time_sync.py
src/utils/: __init__.py  io_utils.py  time_utils.py
src/validation/: __init__.py  baseline_validator.py  custom_expectations.py  suite_builder.py  validators.py
tools/: analyze_raw_csv.py  compute_baseline.py
track_maps/: README.md
track_maps/barber/: MAP_PLACEHOLDER.md  metadata.json
(+3 files in other folders)
